--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
+
 # MAIN_VITE_KEY=123      # only main process available
 # PRELOAD_VITE_KEY=123   # only preload scripts available
 # RENDERER_VITE_KEY=123  # only renderers available
 # VITE_KEY=123           # all available
+
+
+VITE_BASE_API_URL="http://localhost:11434/api"
