--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
     "electron-updater": "^6.1.7",
+    "react-icons": "^5.4.0",
     "react-spinners": "^0.15.0"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-icons": "^2.2.7",
     "@types/tailwindcss": "^3.0.11",
     "@vitejs/plugin-react": "^4.3.1",
     "electron": "^31.0.2",
