--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@electron-toolkit/utils": "^3.0.0",
     "electron-updater": "^6.1.7",
     "react-icons": "^5.4.0",
-    "react-spinners": "^0.15.0"
+    "react-spinners": "^0.15.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
