--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
     "cheerio": "^1.0.0",
+    "dompurify": "^3.2.4",
     "electron-updater": "^6.1.7",
+    "marked": "^15.0.7",
     "react-icons": "^5.4.0",
     "react-markdown": "^10.0.0",
     "react-spinners": "^0.15.0",
@@ -35,6 +37,8 @@
     "@electron-toolkit/eslint-config-ts": "^2.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@types/cheerio": "^0.22.35",
+    "@types/dompurify": "^3.0.5",
+    "@types/marked": "^5.0.2",
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
