--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^5.4.0",
     "react-markdown": "^10.0.0",
     "react-spinners": "^0.15.0",
+    "sqlite-electron": "^3.2.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
